--- a/Scantron/Scantron/Scantron.csproj
+++ b/Scantron/Scantron/Scantron.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Grader.cs" />
     <Compile Include="Scantron.cs">
       <SubType>Form</SubType>
     </Compile>
