--- a/Scantron/Scantron/Scantron.csproj
+++ b/Scantron/Scantron/Scantron.csproj
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Card.cs" />
     <Compile Include="Student.cs" />
     <EmbeddedResource Include="Scantron.resx">
       <DependentUpon>Scantron.cs</DependentUpon>
