--- a/Scantron/Scantron/Config.json
+++ b/Scantron/Scantron/Config.json
@@ -3,28 +3,10 @@
 	{
 		"port_name" : ,
 		"baud_rate" : ,
-		"parity" : ,
+		"parity_bit" : ,
 		"stop_bits" :
 	}
-	
-	"Serial_Config_Avd" :
-	{
-		"data_bits" : ,
-		"discard_null" : ,
-		"dtr_enable" : ,
-		"encoding" : ,
-		"handshake" : ,
-		"new_line" : ,
-		"parity_replace" : ,
-		"read_buffer_size" : ,
-		"read_timeout" : ,
-		"recieved_bytes_threshold" : ,
-		"rts_enable" : ,
-		"site" : ,
-		"write_buffer_size" : ,
-		"write_timeout" :
-	}
-	
+		
 	"Scantron_Config" :
 	{
 		"start_of_record" : ,
@@ -40,7 +22,6 @@
 		"start" : ,
 		"stop" : ,
 		"release" : ,
-		"status" : ,
 		"select_stacker" : ,
 		"download" : ,
 		"runtime" : ,
@@ -48,7 +29,7 @@
 		"scanner_control" : ,
 		"print_position" : ,
 		"print_data" : ,
-		"display_ data" : ,
+		"display_data" : ,
 		"end_of_info" : ,
 		"end_of_batch" : ,
 		"ocr" :
