--- a/Scantron/Scantron/Scantron.csproj
+++ b/Scantron/Scantron/Scantron.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Grader.cs" />
     <Compile Include="GUI.cs" />
     <Compile Include="Question.cs" />
+    <Compile Include="ScannerConfig.cs" />
     <Compile Include="Scantron.cs">
       <SubType>Form</SubType>
     </Compile>
