Removed images that didn't work.

--- a/Scantron/Scantron/Scantron.csproj
+++ b/Scantron/Scantron/Scantron.csproj
@@ -71,6 +71,11 @@
   <ItemGroup>
     <Compile Include="Grader.cs" />
     <Compile Include="GUI.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Question.cs" />
     <Compile Include="ScannerCom.cs" />
     <Compile Include="Scantron.cs">
@@ -89,6 +94,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Config.json" />
     <None Include="packages.config" />
