--- a/Scantron/Scantron/Scantron.csproj
+++ b/Scantron/Scantron/Scantron.csproj
@@ -77,7 +77,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Question.cs" />
-    <Compile Include="ScannerCom.cs" />
+    <Compile Include="Scanner.cs" />
     <Compile Include="Scantron.cs">
       <SubType>Form</SubType>
     </Compile>
