--- a/Scantron/Scantron/Scantron.csproj
+++ b/Scantron/Scantron/Scantron.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Card.cs" />
+    <Compile Include="SimpleScanner.cs" />
     <Compile Include="Student.cs" />
     <EmbeddedResource Include="Scantron.resx">
       <DependentUpon>Scantron.cs</DependentUpon>
